--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,31 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | newline_to_br | split: '<br />' | join: " * " | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+  <meta property="fb:profile_id"  content="{{ site.fb_profile_id }}">
+  <meta property="fb:app_id"      content="{{ site.fb_app_id }}">
+  <meta property="og:url"         content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <meta property="og:type"        content="{% case page.layout when 'post' %}article{% when 'page' %}profile{% else %}website{% endcase %}">
+  <meta property="og:title"       content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}">
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | newline_to_br | split: '<br />' | join: " * " | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <!--
+    <meta property="og:image"       content="">
+  -->
+  <meta property="og:locale"      content="{{ site.locale }}">
+  <meta property="og:site_name"   content="{{ site.title }}">
+
+  {% case page.layout when 'post' %}
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+  <meta property="article:author"         content="{{ site.fb_profile_id }}">
+  <meta property="article:publisher"      content="{{ site.fb_profile_id }}">
+  {% else %}
+  {% endcase %}
 </head>
