--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% include fb_init.html %}
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
@@ -13,3 +15,5 @@ layout: default
   </div>
 
 </article>
+
+{% include fb_like.html %}
