adding favicon and site icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header class="site-header">
 
   <div class="wrapper">
+    
+    <span class="site-icon">{% include icon.svg icon_size = '36' %}</span>
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
